# FEM2d

./: .gitignore  README.md  mitcs6.py
cpp/: CMakeLists.txt  README.md  input_parser.cpp  input_parser.h  main.cpp  mitcs6.cpp  mitcs6.h  plate.inp
